# fastapi_postgres_server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  database.py  exceptions.py  main.py
src/api/: bar.py  foo.py
src/models/: __init__.py  bar.py  base.py  foo.py
src/schemas/: bar.py  foo.py
