[tool.poetry]
name = "fastapi_postgresql_server"
version = "0.1.0"
description = ""
authors = ["Alex Moore"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
uvloop = "^0.16.0"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.34"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
